adding components to simplify configuration and modularity; added docs